tests/frontend_tests/error_if_no_condition.c
int main() {
  // error: expected expression, got ')'
  if() return 3;
}
